# bucl-rust

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.claude/: settings.local.json
demo/: bucl.js  index.html
docs/demo/js/: bucl.js  index.html
docs/demo/wasm/: index.html  worker.js
docs/demo/wasm/pkg/: bucl_wasm.wasm
examples/: hello.bucl  implode_sample.bucl  index_test.bucl  named_params_test.bucl  primitives_test.bucl
functions/: connect_test.bucl  explode.bucl  implode.bucl  maxlength.bucl  reverse.bucl  slice.bucl  strpos.bucl  substr.bucl  tohex.bucl  urlencode.bucl
src/: ast.rs  error.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/functions/: assign.rs  cmp.rs  count.rs  each.rs  echo.rs  getvar.rs  if_fn.rs  length.rs  math.rs  mod.rs  random.rs  readfile.rs  repeat.rs  setvar.rs  sleep.rs  strpos.rs  substr.rs  writefile.rs
