[package]
name = "bucl"
version = "0.1.0"
edition = "2021"
description = "Parser and executor for BUCL - BatchUp Command Line"
license = "MPL-2.0"

[[bin]]
name = "bucl"
path = "src/main.rs"

[lib]
name = "bucl_wasm"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
panic = "abort"
